--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -2,6 +2,310 @@
   box-sizing: border-box;
 }
 
-p {
-  font-size: 30px;
+a:hover {
+  opacity: 0.5 ;
+}
+
+.display {
+  width:130px;
+  height:130px;
+  background-color: #3CCACE;
+  text-decoration: none;
+  position:fixed;
+  z-index:1;
+  bottom: 30px;
+  right: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__text {
+    font-size: 20px;
+    color: white;
+  }
+}
+.display:hover {
+  opacity: 0.9 ;
+}
+
+.header {
+  padding: 15px 60px 0px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__top {
+    width: calc(100vw - 400px);
+    min-width: 400px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__search {
+      &__form {
+        display: flex;
+        align-items: center;
+        .text {
+          width: calc(100vw - 600px);
+          height: 36px
+        }
+        .button {
+          width: 36px;
+          height: 36px;
+          background-color: #3CCACE;
+          border-style: none;
+        }
+      }
+    }
+  }
+  &__bottom {
+    width: calc(100vw - 400px);
+    font-size: 13px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__left {
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      &__category, &__brand {
+        padding: 0px 40px 0px 0px;
+      }
+    }
+    &__right {
+      display: flex;
+      justify-content: end;
+      align-items: center;
+      &__login, &__create {
+        padding: 0px 0px 0px 40px;
+        .link {
+          color: black;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  width: 100vw;
+  height: 760px;
+  background-color: #272727;
+  .image-bottom {
+    width: 100vw;
+    height: 400px;
+    color: white;
+    text-shadow:2px 2px 2px #888888;
+    background-image: url(bg-appBanner-pict.jpg);
+    background-size: cover;
+    background-position: right 10% bottom 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .title {
+      font-size: 35px;
+    }
+    .text {
+      font-size: 25px;
+    }
+    .badges {
+      padding: 40px 80px 0px 80px;
+      display: flex;
+      align-items: center;
+    }
+  }
+  &__top {
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__left, &__center, &__right {
+      width: calc(100vw/5);
+      height: 172px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .title {
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+        margin-bottom: 10px;
+      }
+      .link {
+        font-size: 12px;
+        color: white;
+        text-decoration: none;
+        margin-top: 15px;
+      }
+    }
+  }
+  &__bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .logo {
+      height: 46px;
+    }
+    .copylight {
+      font-size: 13px;
+      color: white;
+    }
+  }
+}
+
+.main {
+  .image-top {
+    width: 100vw;
+    height: 600px;
+    color: white;
+    text-shadow:2px 2px 2px #888888;
+    background-image: url(bg-mainVisual-pict_pc.jpg);
+    background-size: cover;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .title {
+      font-size: 50px;
+      padding: 20px 80px;
+    }
+    .text {
+      padding: 0px 80px;
+    }
+    .badges {
+      padding: 40px 80px 0px 80px;
+      display: flex;
+      align-items: center;
+    }
+  }
+  .reason, .feature {
+    padding: 60px 20px;
+    &__title {
+      font-size: 25px;
+      font-weight: bold;
+      text-align: center;
+      margin: 15px 0px 30px 0px;
+      position: relative;
+    }
+    &__title:before {
+      position: absolute;
+      bottom: -10px;
+      left: calc(50% - 30px);
+      width: 60px;
+      height: 5px;
+      content: '';
+      border-radius: 3px;
+      background: #3CCACE;
+    }
+    &__context {
+      display: flex;
+      justify-content: center;
+      &__left, &__center, &__right {
+        width: 306px;
+        margin: 16px 50px 0px 0px;
+        position: relative;
+        .number {
+          width: 55px;
+          height: 50px;
+          font-size: 30px;
+          color: white;
+          text-align: center;
+          background-color: #3CCACE;
+          padding-top: 5px;
+          position: absolute;
+        }
+        &__title {
+          font-size: 22px;
+          font-weight: bold;
+          text-align: center;
+          margin: 20px 0px;
+          .text {
+            color: #3CCACE;
+          }
+        }
+        &__text {
+          font-size: 16px;
+        }
+        .short {
+          text-align: center;
+        }
+      }
+      .last {
+        margin: 16px 0px 0px 0px;
+      }
+    }
+  }
+
+  .image-middle {
+    width: 100vw;
+    height: 400px;
+    color: white;
+    text-shadow:2px 2px 2px #888888;
+    background-image: url(bg-topMiddleDl-pict.jpg);
+    background-size: cover;
+    background-position: right 10% bottom 10%;
+    margin-top: 20px;
+    padding-top: -100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .title {
+      font-size: 30px;
+      padding: 20px 80px;
+    }
+    .text {
+      padding: 0px 80px;
+    }
+    .badges {
+      padding: 40px 80px 0px 80px;
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  .pickup-category, .pickup-brand {
+    background-color: #f8f8f8;
+    padding: 60px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &__title {
+      font-size: 28px;
+      font-weight: bold;
+    }
+    &__link {
+      font-size: 26px;
+      font-weight: bold;
+      padding-bottom: 20px;
+      .link {
+        color: #3CCACE;
+        text-decoration: none;
+      }
+    }
+    &__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .item1, .item2, .item3, .item4, .item5 {
+        text-decoration: none;
+        color: black;
+        .context {
+          background-color: white;
+          padding: 10px;
+          .value {
+            font-size: 13px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+          }
+          .tax {
+            font-size: 10px;
+          }
+        }
+      }
+    }
+  }
 }
