developed category function(途中)

--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -74,7 +74,7 @@ body {
           }
         }
         &__form {
-          &__field, .select, .select-category{
+          &__field, #select, .select-category{
             width: 600px;
             height: 50px;
             padding-left: 18px;
