--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -74,7 +74,7 @@ body {
           }
         }
         &__form {
-          &__field {
+          &__field, #select, .select-category{
             width: 600px;
             height: 50px;
             padding-left: 18px;
@@ -83,6 +83,9 @@ body {
             width: 600px;
             height: 200px;
             padding: 18px;
+          }
+          .select-category {
+            margin-bottom: 3px;
           }
         }
       }
@@ -121,6 +124,8 @@ body {
       &__put-up {
         width: 400px;
         height: 80px;
+        font-size: 30px;
+        color: white;
         background-color: #3CCACE;
         border: none;
         border-radius: 5px;
