--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -15,7 +15,10 @@
       .header__bottom__left__brand
         ブランド
     .header__bottom__right
+      -if  user_signed_in? 
+        = link_to "マイページ", destroy_user_session_path, method: :delete
+      -else
       .header__bottom__right__login
-        = link_to "ログイン", root_path, class: "link"
+        = link_to "ログイン", new_user_session_path, class: "link"
       .header__bottom__right__create
-        = link_to "新規会員登録", root_path, class: "link"
+        = link_to "新規会員登録", new_user_registration_path, class: "link"
