--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -3,7 +3,7 @@
     = link_to image_tag(src='logo.png', size: "200x55"), root_path
 
   .main
-    = form_with url: "/items", method: "GET", class: "form", local: true do |f|
+    = form_with model: @item, class: :form, local: true do |f|
       .top
         .top__image
           .top__image__title
@@ -27,7 +27,7 @@
             .top__name__title__right
               必須
           .top__name__form
-            = f.text_field :text, class: 'top__name__form__field', placeholder: '40文字まで'
+            = f.text_field :name, class: 'top__name__form__field', placeholder: '40文字まで'
         .top__description
           .top__description__title
             .top__description__title__left
@@ -35,7 +35,7 @@
             .top__description__title__right
               必須
           .top__description__form
-            = f.text_area :text, class: 'top__description__form__field field-area', placeholder: '説明を入れてください&#13;&#10;&#13;&#10;例)　祖母からもらったペンダントです'.html_safe 
+            = f.text_area :description, class: 'top__description__form__field field-area', placeholder: '説明を入れてください&#13;&#10;&#13;&#10;例)　祖母からもらったペンダントです'.html_safe
 
       .detail
         .detail__category
@@ -45,7 +45,7 @@
             .detail__category__title__right
               必須
           .detail__category__form
-            = f.collection_select :select, Category.where(ancestry: nil), :id, :name, {prompt: "選択してください"}, required: true, class: "select-category"
+            = f.collection_select :category, Category.where(ancestry: nil), :id, :name, {prompt: "選択してください", selected: @item.category_id}, required: true, class: "select select-category"
         .detail__brand
           .detail__brand__title
             .detail__brand__title__left
@@ -53,7 +53,7 @@
             .detail__brand__title__right.optional
               任意
           .detail__brand__form
-            = f.text_field :text, class: 'detail__brand__form__field', placeholder: '例)　メルエム'
+            = f.text_field :brand, class: 'detail__brand__form__field', placeholder: '例)　メルエム', value: @brand
         .detail__condition
           .detail__condition__title
             .detail__condition__title__left
@@ -61,7 +61,7 @@
             .detail__condition__title__right
               必須
           .detail__condition__form
-            = f.collection_select :select, Condition.all, :id, :condition
+            = f.collection_select :condition, Condition.all, :id, :condition, {prompt: "選択してください", selected: @item.condition_id}, required: true, class: "select"
 
       .shipping
         .shipping__pay
@@ -71,7 +71,7 @@
             .shipping__pay__title__right
               必須
           .shipping__pay__form
-            = f.collection_select :select, Shipping.all, :id, :shipping
+            = f.collection_select :shipping_pay, Shipping.all, :id, :shipping, {prompt: "選択してください", selected: @item.shipping_id}, required: true, class: "select"
         .shipping__prefecture
           .shipping__prefecture__title
             .shipping__prefecture__title__left
@@ -79,7 +79,7 @@
             .shipping__prefecture__title__right
               必須
           .shipping__prefecture__form
-            = f.collection_select :select, Prefecture.all, :id, :name
+            = f.collection_select :prefecture, Prefecture.all, :id, :name, {prompt: "選択してください", selected: @item.prefecture_id}, required: true, class: "select"
         .shipping__day
           .shipping__day__title
             .shipping__day__title__left
@@ -87,7 +87,7 @@
             .shipping__day__title__right
               必須
           .shipping__day__form
-            = f.collection_select :select, ShippingDay.all, :id, :shipping_day
+            = f.collection_select :shipping_day, ShippingDay.all, :id, :shipping_day, {prompt: "選択してください", selected: @item.shipping_day_id}, required: true, class: "select"
 
       .price
         .price__title
@@ -96,7 +96,7 @@
           .price__title__right
             必須
         .price__form
-          = f.number_field :number, class: 'price__form__field', placeholder: '0~9,999,999を入力してください'
+          = f.number_field :price, class: 'price__form__field', placeholder: '0~9,999,999を入力してください'
 
       .button
         = f.submit '出品する', class: 'button__put-up'
