--- a/app/views/devise/registrations/new_profiles.html.haml
+++ b/app/views/devise/registrations/new_profiles.html.haml
@@ -1,13 +1,44 @@
-.AccountPage
-  .AccountPage__title
-    %h2 Create Account
-    %h5 本人確認情報
-    = render "devise/shared/links"
-  .AccountPage__form
-    = form_for @profiles do |f|
-      = render "devise/shared/error_messages", resource: @profile
-      .FormField
-        .FormField__label--normal
-          = f.label :first_name
-        .FormField__input--normal
-          = f.text_field :first_name
+.form
+  .new-header
+    .new-header__title
+      = link_to image_tag(src="logo.png", size: "140x40"), root_path
+  .main
+    .main__box
+      .main__title
+        ユーザー情報登録
+      = form_for @profile do |f| 
+        = render "devise/shared/error_messages", resource: @profile
+        .box
+          .field
+            .field__label
+              = f.label :first_name
+              %br/
+            .field__box
+              = f.text_field :first_name
+          .field
+            .field__label
+              = f.label :last_name
+              %br/
+            .field__box
+              = f.text_field :last_name
+          .field
+            .field__label
+              = f.label :kana_first_name
+              %br/
+            .field__box
+              = f.text_field :kana_first_name
+          .field
+            .field__label
+              = f.label :kana_last_name
+              %br/
+            .field__box
+              = f.text_field :kana_last_name
+          .field
+            .field__label
+              = f.label :birthday
+              %br/
+            .field__box
+              = f.date_field :birthday
+          .actions
+            = f.submit "Next", class: 'btn'
+        = render "devise/shared/links"
