add put-up function(完成)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,16 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "show";
+
+.notifications {
+  color: white;
+  text-align: center;
+
+  .notice {
+    background-color: #3CCACE;
+  }
+
+  .alert {
+    background-color: red;
+  }
+}
