--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -14,12 +14,21 @@
           .top__image__text
             最大5枚までアップロードできます
           .top__image__upload
-            = f.fields_for :images do |i|
-              = i.file_field :image, type: 'file', id:"img-file", style: "display:none", class: "field__file"
-              %label{for: "img-file", class: 'label'}
-                %i.fas.fa-camera.icon
-                  .text
-                    ファイルをアップロード
+            .previews
+              - if @item.persisted?
+                = @item.images.each_with_index do |image, i|
+                  = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
+            .area
+              - count = 0
+              = f.fields_for :item_images do |i|
+                - count = count + 1
+                -if count == 1
+                  .field
+                    .file{"data-index": 0}
+                      = i.file_field :image_url, id:"img-file", class: "file__image"
+                      %label{for: "img-file0", class: 'label'}
+                        %i.fas.fa-camera.icon
+
         .top__name
           .top__name__title
             .top__name__title__left
@@ -45,7 +54,7 @@
             .detail__category__title__right
               必須
           .detail__category__form
-            = f.collection_select :select, Category.where(ancestry: nil), :id, :name, {prompt: "選択してください"}, required: true, class: "select-category"
+            = f.collection_select :category_id, Category.where(ancestry: nil), :id, :name, {prompt: "選択してください", selected: @item.category_id}, required: true, class: "select select-category"
         .detail__brand
           .detail__brand__title
             .detail__brand__title__left
@@ -53,7 +62,7 @@
             .detail__brand__title__right.optional
               任意
           .detail__brand__form
-            = f.text_field :brand, class: 'detail__brand__form__field', placeholder: '例)　メルエム', value: @brand
+            = f.text_field :brand, class: 'detail__brand__form__field', placeholder: '例)　メルエム', value: @brand_id
         .detail__condition
           .detail__condition__title
             .detail__condition__title__left
@@ -61,7 +70,7 @@
             .detail__condition__title__right
               必須
           .detail__condition__form
-            = f.collection_select :condition, Condition.all, :id, :condition, {prompt: "選択してください", selected: @item.condition_id}, required: true, class: "select"
+            = f.collection_select :condition_id, Condition.all, :id, :condition, {prompt: "選択してください", selected: @item.condition_id}, required: true, class: "select"
 
       .shipping
         .shipping__pay
@@ -71,7 +80,7 @@
             .shipping__pay__title__right
               必須
           .shipping__pay__form
-            = f.collection_select :shipping_pay, Shipping.all, :id, :shipping, {prompt: "選択してください", selected: @item.shipping_id}, required: true, class: "select"
+            = f.collection_select :shipping_id, Shipping.all, :id, :shipping, {prompt: "選択してください", selected: @item.shipping_id}, required: true, class: "select"
         .shipping__prefecture
           .shipping__prefecture__title
             .shipping__prefecture__title__left
@@ -79,7 +88,7 @@
             .shipping__prefecture__title__right
               必須
           .shipping__prefecture__form
-            = f.collection_select :prefecture, Prefecture.all, :id, :name, {prompt: "選択してください", selected: @item.prefecture_id}, required: true, class: "select"
+            = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: "選択してください", selected: @item.prefecture_id}, required: true, class: "select"
         .shipping__day
           .shipping__day__title
             .shipping__day__title__left
@@ -87,7 +96,7 @@
             .shipping__day__title__right
               必須
           .shipping__day__form
-            = f.collection_select :shipping_day, ShippingDay.all, :id, :shipping_day, {prompt: "選択してください", selected: @item.shipping_day_id}, required: true, class: "select"
+            = f.collection_select :shipping_day_id, ShippingDay.all, :id, :shipping_day, {prompt: "選択してください", selected: @item.shipping_day_id}, required: true, class: "select"
 
       .price
         .price__title
@@ -96,7 +105,7 @@
           .price__title__right
             必須
         .price__form
-          = f.number_field :price, class: 'price__form__field', placeholder: '0~9,999,999を入力してください'
+          = f.number_field :price, class: 'price__form__field', placeholder: '1~9,999,999を入力してください'
 
       .button
         = f.submit '出品する', class: 'button__put-up'
