--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "items";
 @import "user";
 @import "new";
+@import "create";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "show";
