--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -1,7 +1,3 @@
-body {
-  background-color: rgb(245, 245, 245);
-}
-
 input[type="file"] {
   width: 100%;
   height:100%;
@@ -10,6 +6,7 @@ input[type="file"] {
 }
 
 .page {
+  background-color: rgb(245, 245, 245);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -123,7 +120,7 @@ input[type="file"] {
           }
         }
         &__form {
-          &__field, #select, .select-category{
+          &__field, .select, .select-category{
             width: 600px;
             height: 50px;
             padding-left: 18px;
