--- a/app/views/items/create.html.haml
+++ b/app/views/items/create.html.haml
@@ -1,4 +1,6 @@
 .put-up
+  .logo
+    = link_to image_tag(src='logo.png', size: "200x55"), root_path
   .put-up__message
     = @item[:name]
     を出品しました!
