--- a/app/assets/stylesheets/create.scss
+++ b/app/assets/stylesheets/create.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  aaaaaaaa
+  aaaaaaaa
   &__message {
     width: 400px;
     font-size: 30px;
