--- a/app/views/items/confirm.html.haml
+++ b/app/views/items/confirm.html.haml
@@ -11,5 +11,6 @@
           %p.item-price
             %span 送料込み(税込)
             %span.price ¥2000
-
-
+    %section
+      .price-box
+        %h1 合計金額
