--- a/app/views/items/_footer.html.haml
+++ b/app/views/items/_footer.html.haml
@@ -22,7 +22,7 @@
       = link_to "ヘルプ&ガイド", root_path, class: "title"
       = link_to "FURIMAガイド", root_path, class: "link"
       = link_to "FURIMAロゴ利用ガイドライン", root_path, class: "link"
-      = link_to "お知らせ", root_path, class: "link"
+      = link_to "お知らせ", "", class: "link"
       
   .footer__bottom
     .logo
