--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import "reset";
-@import "items";
-@import "user";
-@import "new";
-@import "create";
+@import "users/user";
+@import "users/show";
+@import "items/index";
+@import "items/new";
+@import "items/create";
+@import "items/show";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "show";
