--- a/app/assets/stylesheets/items/new.scss
+++ b/app/assets/stylesheets/items/new.scss
@@ -79,6 +79,7 @@ input[type="file"] {
                 border-radius: 5px;
                 padding: 5px;
                 margin: 3px 0px;
+                cursor:pointer;
               }
             }
           }
