--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,8 @@
 @import "font-awesome";
 @import "show";
 @import "confirm";
+@import "slick-theme"; 
+@import "slick";
 
 .notifications {
   color: white;
