--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -1,8 +1,13 @@
+* {
+  border-style: solid;
+  border-width: 0;
+}
 .form {
   display: block;
   padding: 0 0 220px;
   background: whitesmoke;
-
+  font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;;
+  color: #333333;
   .new-header {
     height: 128px;
     text-align: center;
@@ -18,6 +23,7 @@
 
   .main {
     display: block;
+    display: flex;
     &__box {
       width: 700px;
       margin: 0 auto;
@@ -38,25 +44,72 @@
       max-width: 343px;
       margin: 0 auto;
       .field {
-        margin-top: 32px;
+        margin-top: 24px;
         &__label {
           font-weight: 600;
+        }
+        &__label__attention {
+          background: #ea352e;
+          margin: 0 0 0 8px;
+          padding: 2px 4px;
+          border-radius: 2px;
+          color: #fff;
+          font-size: 12px;
+          vertical-align: top;
+        }
+        &__label__attention2 {
+          background: #cccccc;
+          margin: 0 0 0 8px;
+          padding: 2px 4px;
+          border-radius: 2px;
+          color: #fff;
+          font-size: 12px;
+          vertical-align: top;
         }
         &__box {
           input {
           width: 100%;
+          margin: 8px 0 0;
           height: 48px;
           padding: 10px 16px 8px;
-          margin: 8px 0 0;
           border: 1px solid #cccccc;
+          border-radius: 4px;
           background: #ffffff;
           line-height: 1.5;
           font-size: 16px;
           }
-          
+          .half {
+            width: calc(50% - 6px);
+          }
+        }
+        .profile-title {
+          display: block;
+          font-size: 16px;
+          font-weight: bold;
+
+        }
+        .text {
+          margin: 8px 0 0 0;
+          padding: 0;
+          font-size: 14px;
         }
       }
+      :first-child {
+        margin-top: 0;
+      }
     }
+    .login-box {
+      max-width: none;
+      width: 456px;
+      margin: 0 auto;
+      background: #ffffff;
+      .no-login {
+        padding: 40px 64px;
+        text-align: center;
+        border-bottom: 1px solid whitesmoke;
+      }
+    }
+  }
   .btn {
     margin: 24px 0 0;
     display: block;
@@ -68,6 +121,15 @@
     border: 1px solid #3CCACE;
     color: #ffffff;
   }
+  .log-btn {
+    display: block;
+    margin: 8px 0 0;
+    border-radius: 4px;
+    border: 1px solid #0099e8;
+    background: #0099e8;
+    color: #fff;
+    line-height: 40px;
+    text-decoration: none;
+  }
     
   }
-}
