developed credit card registration function

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,10 @@
 @import "items/new";
 @import "items/create";
 @import "items/show";
+@import "cards";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "show";
+//@import "show";
 @import "confirm";
 @import "slick-theme"; 
 @import "slick";
