--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,10 +5,11 @@
   .my-page__main
     .my-page__main__left
       = link_to "トップページ", root_path, class: "link"
+      = link_to "マイページ", users_show_path(current_user.id), class: "link select"
       = link_to "プロフィール", root_path, class: "link"
       = link_to "送付先住所情報", root_path, class: "link"
       = link_to "メール/パスワード", root_path, class: "link"
-      = link_to "クレジットカード情報", root_path, class: "link"
+      = link_to "クレジットカード情報", cards_path, class: "link"
       = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
     .my-page__main__center
       .title
