developed delete function

--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -123,7 +123,7 @@
         padding: 15px 250px;
         border-radius: 3px;
       }
-      .destroy-btn{
+      .delete {
         display: block;
         text-decoration: none;
         color: #ffffff;
