--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -60,7 +60,7 @@
         .bought 売り切れました
       - elsif user_signed_in? && current_user.id ==@item.user_id
         =link_to "商品の編集","#",class:"edit-btn"
-        =link_to "この商品を削除する","#",class:"destroy-btn"
+        =link_to "この商品を削除する", item_path(@item[:id]), method: :delete ,class:"delete", id:"#{@item[:id]}"
       -else
         =link_to "購入画面に進む","#",class:"buy-btn"
     .option-box
