--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -26,7 +26,7 @@
             - @images.each do |image|
               .area
                 .image
-                  = link_to image_tag(image[1][0].image_url.url, width: "200", height: '200', class: "img"), '/items/1'
+                  = link_to image_tag(image[1][0].image_url.url, width: "200", height: '200', class: "img"), item_path(image[0][:id])
                 .name
                   = image[0][:name]
                 - if image[0][:buyer_id] != nil
