--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -97,7 +97,7 @@ a:hover {
     height: 400px;
     color: white;
     text-shadow:2px 2px 2px #888888;
-    background-image: url(bg-appBanner-pict.jpg);
+    background-image: url(/assets/bg-appBanner-pict.jpg);
     background-size: cover;
     background-position: right 10% bottom 30%;
     display: flex;
@@ -161,7 +161,7 @@ a:hover {
     height: 600px;
     color: white;
     text-shadow:2px 2px 2px #888888;
-    background-image: url(bg-mainVisual-pict_pc.jpg);
+    background-image: url(/assets/bg-mainVisual-pict_pc.jpg);
     background-size: cover;
     margin-top: 20px;
     display: flex;
@@ -243,7 +243,7 @@ a:hover {
     height: 400px;
     color: white;
     text-shadow:2px 2px 2px #888888;
-    background-image: url(bg-topMiddleDl-pict.jpg);
+    background-image: url(/assets/bg-topMiddleDl-pict.jpg);
     background-size: cover;
     background-position: right 10% bottom 10%;
     margin-top: 20px;
