--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,18 @@
 .form
   .new-header
     .new-header__title
-      = link_to image_tag(src="logo.png", size: "140x40"), root_path
-    .new-header__progress
-      %ol
-        %li.new-header__progress__text--active{ id: "first" }
+      = link_to image_tag(src="logo.png", size: "185x49"), root_path
+    .progress-bar
+      %ol.cleafix
+        %li.active{ id: "first" }
           会員情報
-          .new-header__progress__round--red
-        %li.new-header__progress__text
+          .progress-status
+        %li
           お届け先住所入力
-          .new-header__progress__round     
-        %li.new-header__progress__text
-          支払い方法
-          .new-header__progress__round    
-        %li.new-header__progress__text{ id: "end" }
+          .progress-status    
+        %li{ id: "end" }
           完了
-          .new-header__progress__round
+          .progress-status
   .main
     .main__box
       .main__title
