--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,17 +2,17 @@
   .new-header
     .new-header__title
       = link_to image_tag(src="logo.png", size: "185x49"), root_path
-    .progress-bar
-      %ol.cleafix
-        %li.active{ id: "first" }
-          会員情報
-          .progress-status
-        %li
-          お届け先住所入力
-          .progress-status    
-        %li{ id: "end" }
-          完了
-          .progress-status
+    -# .progress-bar
+    -#   %ol.cleafix
+    -#     %li.active{ id: "first" }
+    -#       会員情報
+    -#       .progress-status
+    -#     %li
+    -#       お届け先住所入力
+    -#       .progress-status    
+    -#     %li{ id: "end" }
+    -#       完了
+    -#       .progress-status
   .main
     .main__box
       .main__title
