--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,9 +8,10 @@
 @import "cards";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "confirm";
+@import "show";
 @import "slick-theme"; 
 @import "slick";
+@import "purchases";
 
 .notifications {
   color: white;
