--- a/app/assets/stylesheets/purchases.scss
+++ b/app/assets/stylesheets/purchases.scss
@@ -1,26 +1,31 @@
+// Place all the styles related to the purchases controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+
 .newpage{
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background-color: #FFF0F5;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .image-logo{
-    height: 130px;
+  .header-logo{
+    height: 150px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .main{
-    height: 1000px;
+    height: 1200px;
     width: 700px;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    h1{
+    h1.item-title{
       font-size: 24px;
       font-weight: bold;
       color: #333333;
@@ -37,22 +42,22 @@
       border-bottom: 1px  solid #f4f4f4;
       .item-box{
         display: flex;
+        padding-left: 40px;
         .image{
           border-radius: 5px;
         }
         .content{
-          margin-left: 20px;
+          margin:5px 20px;
           color: #3e3e3e;
           .item-name{
             width: 250px;
-            font-size: 16px;
-            padding-left:50px ;
-            
+            font-size: 20px;
+            text-align: center;
           }
           .item-price{
             text-align: center;
-            margin-top: 25px;
-            font-size: 14px;
+            margin-top: 40px;
+            font-size: 18px;
             .price{
               font-weight: bold;
             }
@@ -60,5 +65,23 @@
         }
       }
     }
+    .price-box{
+      display: flex;
+      height: 170px;
+      width: 410px;
+      justify-content: space-around;
+      align-items: center;
+      font-size: 24px;
+      font-weight: bold;
+      border-bottom: 1px solid #f4f4f4;
+      .title{
+        font-weight: bold;
+      }
+    }
+  }
+  .footer-logo{
+    padding: 5px;
+    border-radius: 3px;
+    background-color: black;
   }
 }
