--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -62,7 +62,7 @@
         =link_to "商品の編集","#",class:"edit-btn"
         =link_to "この商品を削除する", item_path(@item[:id]), method: :delete ,class:"delete", id:"#{@item[:id]}"
       -else
-        =link_to "購入画面に進む","#",class:"buy-btn"
+        =link_to "購入画面に進む",purchases_path,class:"buy-btn"
     .option-box
       %ul
         %li.like-btn
