--- a/app/views/purchases/index.html.haml
+++ b/app/views/purchases/index.html.haml
@@ -1,16 +1,18 @@
 .newpage
-  .image-logo
+  .header-logo
     = image_tag 'logo.png', height: '50px', width: '185px'
   .main
-    %h1 購入内容の確認
+    %h1.item-title 購入内容の確認
     %section.itemDate
       .item-box
         = image_tag 't-shirt.jpeg',height: '100px', width: '100px', class: 'image'
         .content
           %p.item-name T-シャツ
           %p.item-price
-            %span 送料込み(税込)
+            %span (税込)
             %span.price ¥2000
-    %section
-      .price-box
-        %h1 合計金額
+    %section.price-box
+      %h1.title 支払い金額
+      .price ¥2000
+  .footer-logo
+    =image_tag 'logo-white.png',height: '50px', width: '185px'
