--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "cards";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "show";
+// @import "show";
 @import "slick-theme"; 
 @import "slick";
 @import "purchases";
