--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -18,42 +18,42 @@
         margin: 0 10px 0 0;
       }
     }
-    .progress-bar {
-      padding: 40px 0 0 44px;
-      border: 0;
-      display: inline-block;
-      vertical-align: top;
-      text-align: center;
-      ol {
-        display: block;
-        list-style-type: none;
-        margin-block-start: 1em;
-        margin-block-end: 1em;
-        margin-inline-start: 0px;
-        margin-inline-end: 0px;
-        padding-inline-start: 40px;
-      }
-        .active {
-          font-weight: 600;
-          color:  #3CCACE;
-          li {
-            position: relative;
-            z-index: 1;
-            display: inline-block;
-            min-width: 40px;
-            margin: 0 40px 0 0;
-            font-size: 12px;
-            color: #888;
-          }
-            .progress-status {
-              width: 12px;
-              height: 12px;
-              margin: 8px auto 0;
-              background: #ccc;
-              border-radius: 50%;
-            }
-        }
-      }
+    // .progress-bar {
+    //   padding: 40px 0 0 44px;
+    //   border: 0;
+    //   display: inline-block;
+    //   vertical-align: top;
+    //   text-align: center;
+    //   ol {
+    //     display: block;
+    //     list-style-type: none;
+    //     margin-block-start: 1em;
+    //     margin-block-end: 1em;
+    //     margin-inline-start: 0px;
+    //     margin-inline-end: 0px;
+    //     padding-inline-start: 40px;
+    //   }
+    //     .active {
+    //       font-weight: 600;
+    //       color:  #3CCACE;
+    //       li {
+    //         position: relative;
+    //         z-index: 1;
+    //         display: inline-block;
+    //         min-width: 40px;
+    //         margin: 0 40px 0 0;
+    //         font-size: 12px;
+    //         color: #888;
+    //       }
+    //         .progress-status {
+    //           width: 12px;
+    //           height: 12px;
+    //           margin: 8px auto 0;
+    //           background: #ccc;
+    //           border-radius: 50%;
+    //         }
+    //     }
+    //   }
 
   }
 
