--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -68,8 +68,11 @@
               .field__label
                 = p.label :"生年月日"
                 %span.field__label__attention 必須
+                -# = p.date_field :birthday
+              -# .field__box
+              -#   != sprintf(p.date_select(:birthday, prefix:'birthday',with_css_classes:'year, month, day', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日'
               .field__box
-                = p.date_field :birthday
+                = p.date_select :birthday, {prompt:"--", use_month_numbers: true,start_year:Time.now.year, end_year:1900}, {class: 'select'}
             .field
               .action
                 = f.submit "次へ", class: 'btn'
