--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,3 +1,9 @@
+%a{href: '/items/new', class: "display"}
+  .display__text
+    出品する
+  .display__link
+    = image_tag 'icon_camera.png', class: 'image', width: '70px', height: '70px'
+
 .card
   = render "header"
 
