--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,9 @@
+%a{href: '/items/new', class: "display"}
+  .display__text
+    出品する
+  .display__link
+    = image_tag 'icon_camera.png', class: 'image', width: '70px', height: '70px'
+
 .my-page
   .my-page__logo
     = link_to image_tag(src='logo.png', size: "200x55"), root_path
