--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -76,4 +76,8 @@
             .field
               .action
                 = f.submit "次へ", class: 'btn'
+  .new-footer
+    .new-footer__title
+      .last
+        = link_to image_tag(src="logo-white.png", size: "185x49"), root_path
 
