--- a/app/assets/stylesheets/purchases.scss
+++ b/app/assets/stylesheets/purchases.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the purchases controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
 .newpage{
   height: 100%;
   width: 100vw;
@@ -19,7 +14,7 @@
     align-items: center;
   }
   .main{
-    height: 1200px;
+    height: 900px;
     width: 700px;
     background-color: #ffffff;
     display: flex;
@@ -42,12 +37,14 @@
       border-bottom: 1px  solid #f4f4f4;
       .item-box{
         display: flex;
-        padding-left: 40px;
+        justify-content: center;
+        align-items: center;
+        padding-left: 60px;
         .image{
           border-radius: 5px;
         }
         .content{
-          margin:5px 20px;
+          margin-left: 25px;
           color: #3e3e3e;
           .item-name{
             width: 250px;
@@ -67,21 +64,71 @@
     }
     .price-box{
       display: flex;
-      height: 170px;
+      height: 130px;
       width: 410px;
       justify-content: space-around;
       align-items: center;
       font-size: 24px;
       font-weight: bold;
       border-bottom: 1px solid #f4f4f4;
+      color: #333333;
       .title{
         font-weight: bold;
       }
     }
+    .card-box{
+      height: 150px;
+      width: 410px;
+      border-bottom: 1px solid #f4f4f4;
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+      padding-left: 10px;
+      .content{
+        .title{
+          margin-bottom: 10px;
+        }
+        .card-btn{
+          text-decoration: none;
+          color: #5D99FF;
+        }
+      }
+    }
+    .address-box{
+      height: 170px;
+      width: 410px;
+      border-bottom: 1px solid #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .box{
+        color: #333333;
+        font-size: 16px;
+        .title-box{
+          display: flex;
+          .change{
+            margin-left: 270px;
+          }
+        }
+        .date-box{
+          margin-top: 20px;
+        }
+      }
+    }
+    .buy-btn{
+      text-decoration: none;
+      color: #ffffff;
+      background-color: #3CCACE;
+      margin-top: 40px;
+      padding: 9px 150px;
+      border-radius: 3px;
+      font-size: 24px;
+    }
   }
   .footer-logo{
-    padding: 5px;
-    border-radius: 3px;
+    padding: 7px 6px 2px;
+    border-radius: 6px;
     background-color: black;
+    margin:60px 0;
   }
 }
