new-login (完成?)

--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -1,15 +1,20 @@
-= render "put-up"
+%a{href: '/items/new', class: "display"}
+  .display__text
+    出品する
+  .display__link
+    = image_tag 'icon_camera.png', class: 'image', width: '70px', height: '70px'
 
 .my-page
-  = render "header"
+  .my-page__logo
+    = link_to image_tag(src='logo.png', size: "200x55"), root_path
 
   .my-page__main
     .my-page__main__left
       = link_to "トップページ", root_path, class: "link"
-      = link_to "マイページ", user_path(current_user.id), class: "link select"
+      = link_to "マイページ", users_show_path(current_user.id), class: "link select"
       = link_to "プロフィール", root_path, class: "link"
       = link_to "送付先住所情報", root_path, class: "link"
-      = link_to "メール/パスワード", users_email_path, class: "link"
+      = link_to "メール/パスワード", root_path, class: "link"
       = link_to "クレジットカード情報", cards_path, class: "link"
       = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
     .my-page__main__center
@@ -39,4 +44,6 @@
                       削除
               - count = count + 1
 
-  = render "footer"
+  .my-page__logo
+    .last
+      = link_to image_tag(src='logo-white.png', size: "200x55"), root_path
