--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -17,7 +17,7 @@
     .header__bottom__right
       - if user_signed_in? 
         .header__bottom__right__mypage
-          = link_to "マイページ", users_show_path(current_user.id), class: "link"
+          = link_to "マイページ", user_path(current_user.id), class: "link"
         .header__bottom__right__logout
           = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
       - else
